force-app/main/default/objects/Product_Option__c/fields/Bundle_Section__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Section</label>
    <referenceTo>Bundle_Section__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>