force-app/main/default/objects/Product_Option__c/fields/Configured_SKU__c.field-meta.xml
<CustomField>
    <fullName>Configured_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configured SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Options (Configured SKU)</relationshipLabel>
    <relationshipName>Product_Options1</relationshipName>
    <type>Lookup</type>
</CustomField>