force-app/main/default/objects/Product_Option__c/fields/Optional_SKU__c.field-meta.xml
<CustomField>
    <fullName>Optional_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optional SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>