force-app/main/default/objects/Product_Option__c/fields/Select_All_Option__c.field-meta.xml
<CustomField>
    <fullName>Select_All_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this for Product Options within the Required Optional bundle section</inlineHelpText>
    <label>Select All Option</label>
    <type>Checkbox</type>
</CustomField>