force-app/main/default/objects/Product_Option__c/fields/Show_None_Option__c.field-meta.xml
<CustomField>
    <fullName>Show_None_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this for Product Options within Optional Allow None bundle section</inlineHelpText>
    <label>Show None Option</label>
    <type>Checkbox</type>
</CustomField>